[package]
name = "stuckbar"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"
description = "A CLI tool for restarting Windows Explorer when the taskbar gets stuck"
license = "MIT"
authors = ["Baalateja Kataru"]
repository = "https://github.com/bkataru/stuckbar"
homepage = "https://github.com/bkataru/stuckbar"
documentation = "https://github.com/bkataru/stuckbar#readme"
readme = "README.md"
keywords = ["windows", "taskbar", "explorer", "cli", "utility"]
categories = ["command-line-utilities"]
exclude = [
    ".gitignore",
    ".github/*",
    "target/*",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

[[bin]]
name = "stuckbar"
path = "src/main.rs"
